# exifast

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  FORMATS.md  README-zh_CN.md  README.md  THIRD_PARTY.md
.github/workflows/: ci.yml
benches/: extract.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: media_metadata.rs  parse_bytes.rs  parse_exif_block.rs
src/: bitstream.rs  charset.rs  convert.rs  datetime.rs  diagnostics.rs  emit.rs  error.rs  filetype.rs  filetype_data.rs  format_parser.rs  json_scalar.rs  json_writer.rs  jsondiff.rs  lib.rs  options.rs  parser.rs  parser_new.rs  processbinarydata.rs  reader.rs  recovery.rs  serialize.rs  serialize_key.rs  sink.rs  tagmap.rs  tagtable.rs  value.rs
src/composite/: mod.rs  table.rs  tests.rs
src/composite/convs/: datetime.rs  mod.rs  tests.rs
src/exif/: exiftext.rs  gps.rs  gps_generated.rs  ifd.rs  iptc.rs  jpeg.rs  jpeg_app.rs  mod.rs  render.rs  string_format.rs  tables.rs  tables_generated.rs
src/exif/geotiff/: mod.rs  tables.rs  tests.rs
src/exif/jumbf/: cbor.rs  json.rs  mod.rs  tables.rs  tests.rs
src/exif/makernotes/: byte_order.rs  detected.rs  dispatcher.rs  fixbase.rs  mod.rs  offset.rs  subdir.rs  vendor.rs
src/exif/mng/: mod.rs  tables.rs  tests.rs
src/exif/printim/: mod.rs  tests.rs
src/filetype/: tests.rs
src/formats/: aac.rs  aac_generated.rs  aiff.rs  aiff_common_generated.rs  aiff_main_generated.rs  android_camm.rs  ape.rs  ape_generated.rs  audible.rs  canon_ctmd.rs  crw.rs  dji_protobuf.rs  dji_protobuf_tables.rs  dsf.rs  dsf_generated.rs  dv.rs  dv_generated.rs  flac.rs  flac_main_generated.rs  flac_picture_generated.rs  flac_streaminfo_generated.rs  flash.rs  gopro.rs  h264.rs  insta360.rs  ligogps.rs  m2ts.rs  matroska.rs  misb.rs  mod.rs  moi.rs  mpc.rs  mpc_generated.rs  mpeg.rs  mxf.rs  ogg.rs  ogg_generated.rs  ole.rs  parrot.rs  plist.rs  (+12 more)
src/formats/id3/: decode.rs  genre.rs  v1.rs  (+15 more)
src/metadata/: android_camm.rs  canon_ctmd.rs  crw.rs  dji_protobuf.rs  domain.rs  gopro.rs  insta360.rs  ligogps.rs  mod.rs  parrot.rs  png.rs  project.rs  quicktime.rs  quicktime_brand.rs  quicktime_stream.rs  riff.rs  sony_rtmd.rs  timed_sample.rs
tests/: alloc_budget.rs  conformance.rs  direct_api_chain_routing.rs  engine_smoke.rs  exif_direct_api.rs  exif_makernotes_dispatch.rs  exif_project.rs  flac_streaminfo.rs  harness_golden.rs  iter_tags.rs  jpeg_gopro_app6.rs  json_writer_parity.rs  m2ts.rs  no_panic.rs  panasonic_main_condition.rs  panasonic_main_conv.rs  panasonic_main_format.rs  panasonic_main_hash.rs  panasonic_main_rawconv.rs  panasonic_main_subdir.rs  panasonic_main_table.rs  png.rs  quicktime_brands.rs  quicktime_stream.rs  real_device_fixtures.rs  riff.rs  sony_main_condition.rs  sony_main_conv.rs  sony_main_format.rs  sony_main_hash.rs  sony_main_rawconv.rs  sony_main_subdir.rs  sony_main_table.rs  tiff_subtype_filetype.rs  timed_metadata_conformance.rs  typed_serde_parity.rs  xtask_check.rs
tests/fixtures/: AIFC.aifc  AIFC_highbyte_comp.aifc  AIFC_macroman.aifc  AIFC_noninteger_rate.aifc  AIFC_pre1970.aifc  AIFC_truncated_comm.aifc  AIFF.aif  AIFF_dup_name.aif  AIFF_duration.aif  AIFF_duration_float.aif  AIFF_ext_int_neg_overflow.aif  AIFF_ext_int_overflow.aif  AIFF_first_nv_exp.aif  AIFF_first_overflow_zero_sig.aif  AIFF_huge.aif  AIFF_huge_duration.aif  AIFF_huge_pos_exp.aif  AIFF_id3.aif  AIFF_inf_sample_rate.aif  AIFF_neg_zero_sig.aif  AIFF_r10_exp53_fits_i64.aif  AIFF_short.aif  AIFF_zero_sig_max_exp.aif  APE_apetagex.ape  APE_dup_override.ape  APE_dynamic_edge_keys.ape  APE_huge_composite.ape  APE_nonfinite_composite.ape  APE_old.ape  APE_repeated.ape  APE_spaced_composite.ape  APE_two63_boundary.ape  APE_u64_days.ape  APE_wire_composite_ingredients.ape  ARW_preview_image.arw  AVI_pentaxjunk.avi  AVI_pentaxjunk2.avi  AVI_pentaxjunk2_before_hydt.avi  AVI_pentaxjunk2_dup.avi  AVI_pentaxjunk2_partial.avi  (+484 more)
tests/golden/: AAC.aac.json  AAC.aac.n.json  AIFC.aifc.json  AIFC.aifc.n.json  AIFC_highbyte_comp.aifc.json  AIFC_highbyte_comp.aifc.n.json  AIFC_macroman.aifc.json  AIFC_macroman.aifc.n.json  AIFC_noninteger_rate.aifc.json  AIFC_noninteger_rate.aifc.n.json  AIFC_pre1970.aifc.json  AIFC_pre1970.aifc.n.json  AIFC_truncated_comm.aifc.json  AIFC_truncated_comm.aifc.n.json  AIFF.aif.json  AIFF.aif.n.json  AIFF_dup_name.aif.json  AIFF_dup_name.aif.n.json  AIFF_duration.aif.json  AIFF_duration.aif.n.json  AIFF_duration_float.aif.json  AIFF_duration_float.aif.n.json  AIFF_ext_int_neg_overflow.aif.json  AIFF_ext_int_neg_overflow.aif.n.json  AIFF_ext_int_overflow.aif.json  AIFF_ext_int_overflow.aif.n.json  AIFF_first_nv_exp.aif.json  AIFF_first_nv_exp.aif.n.json  AIFF_first_overflow_zero_sig.aif.json  AIFF_first_overflow_zero_sig.aif.n.json  AIFF_huge.aif.json  AIFF_huge.aif.n.json  AIFF_huge_duration.aif.json  AIFF_huge_duration.aif.n.json  AIFF_huge_pos_exp.aif.json  AIFF_huge_pos_exp.aif.n.json  AIFF_id3.aif.json  AIFF_id3.aif.n.json  AIFF_inf_sample_rate.aif.json  AIFF_inf_sample_rate.aif.n.json  (+1519 more)
tools/: gen_bigtiff_subifd_fixture.py  gen_camm_fixture.py  gen_canon_ctmd_fixture.py  gen_cr2_imagesize_fixture.py  gen_dji_glamour_edge_fixture.py  gen_dji_glamour_fixture.py  gen_dji_glamour_multi_fixture.py  gen_exif_fixtures.py  gen_freegps_gpmd_fixture.py  gen_geotiff_bigtiff_colormap_fixture.py  gen_geotiff_bigtiff_fixture.py  gen_geotiff_tables.pl  gen_golden.sh  gen_insta360_fixture.py  gen_jumbf_fixtures.py  gen_keys_crosstable_fixtures.py  gen_ligogps_decipher_fixture.py  gen_mng_fixtures.py  gen_mng_tables.pl  gen_parrot_arcore_fixture.py  gen_parrot_arcore_malformed_fixtures.py  gen_png_cicp_vpag_fixture.py  gen_png_cpip_fixture.py  gen_png_cpip_userdef_fixture.py  gen_png_harden_fixtures.py  gen_png_idot_fixture.py  gen_png_meta_seal_fixture.py  gen_png_rawprofile_fixtures.py  gen_preview_image_fixtures.py  gen_quicktime_sp2_decode_fixtures.py  gen_quicktime_stsd_bleed_fixture.py  gen_sony_rtmd_fixture.py  gen_sony_rtmd_multistsd_fixture.py  gen_timed_multi_fixtures.py  make_apng.py
xtask/: Cargo.toml
xtask/src/: conv_registry.rs  emit.rs  exif_conv.rs  listx.rs  main.rs
(+244 files in other folders)
