[package]
name = "exifast"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/Findit-AI/exifast"
homepage = "https://github.com/Findit-AI/exifast"
documentation = "https://docs.rs/exifast"
description = "A 1:1 Rust port of ExifTool's metadata reader (video/audio, Stage 1)"
license = "GPL-3.0-or-later"
rust-version = "1.95.0"
categories = [
  "multimedia",
  "multimedia::audio",
  "multimedia::video",
  "parser-implementations",
  "no-std",
  "wasm",
]

# Feature graph — see docs/superpowers/specs/2026-05-21-lib-first-formatparser-design.md §4.
#
# Phase C status: the structure mirrors spec §4 EXACTLY. Per-format features
# carry only their cross-format chain dependencies (e.g. `aiff = ["id3"]`),
# with NO `alloc`/`std` implication. The source code today still uses
# `std::vec::Vec` / `std::string::String` / `smol_str::SmolStr`
# unconditionally under the existing push-style `Metadata` design — so
# feature combos without `std` fail to compile. This is by design: the
# explicit spec §9 CI tiers cover the meaningful combos, with non-default
# tiers marked `continue-on-error: true` until Phase D/E/F migrate Meta
# types. See `docs/tracking.md` → "Decisions deferred during overnight
# execution" for the full audit trail.
[features]
default = ["std", "json", "all-formats"]

# `alloc` pulls in heap-required vocabulary:
# - SmolStr-backed strings for stored data that doesn't borrow from input
# - jiff's heap-allocating internals
# Without `alloc` the crate is pure-borrow: Meta types hold `&'a str` slices
# into the input buffer, durations are `core::time::Duration`, datetimes are
# `jiff::civil::DateTime` (jiff's `alloc` is technically optional but we gate
# our SmolStr/serde paths on it). Phase E and later land this contract.
alloc = ["dep:smol_str", "jiff/alloc"]

# `std` implies `alloc`. mediaframe's idiom: a `--no-default-features --features alloc`
# build skips `std` entirely, exercising the no_std + alloc tier.
std = ["alloc", "smol_str?/std", "jiff/std", "thiserror/default"]

# `serde` enables the OPTIONAL `Serialize` impls on the typed value/Meta
# types (grouped in anonymous gated `const _` blocks per skill §8). The core
# typed library (parse_bytes -> AnyMeta with accessors) works WITHOUT serde —
# this is the serde-free minimal tier. `serde` itself does NOT pull `alloc`;
# the impls are individually gated where they need heap (`Vec`/`SmolStr`),
# matching the surrounding type's own gating.
serde = ["dep:serde", "jiff/serde"]

# CLI JSON emission (byte output via `serde_json`). DEPENDS on `serde` (the
# `Serialize` impls) and needs `alloc` (`serde_json` + the `Vec<Tag>` engine
# sink). `jsondiff` (the value-semantic diff oracle) also uses `serde::de`
# under this feature.
json = ["serde", "alloc", "dep:serde_json", "dep:serde"]

# Umbrella — enables every per-format gate.
all-formats = [
  "aac", "aiff", "ape", "audible", "crw", "dsf", "dv", "exif", "flac", "flash",
  "gps", "h264", "id3", "matroska", "mp3", "mpc", "moi", "mxf", "ogg",
  "plist", "png", "quicktime", "real", "red", "wavpack",
]

# Per-format gates with cross-format dependency chains.
# These are the canonical statement of WHO chains WHOM; currently scattered
# across format-module comments.
#
# Phase C status: the structure mirrors spec §4 exactly. Feature graph leaves
# (`aac`, `audible`, `dv`, `moi`, `ogg`, `red`) carry no `alloc`/`std`
# implication. The source code today uses `std::vec::Vec`, `std::string::String`,
# `smol_str::SmolStr`, etc. unconditionally — so `--no-default-features
# --features aac` alone fails to compile. This is expected: see
# `docs/tracking.md` for the Phase D/E migration that retires the std
# coupling per-format. Until then, the only buildable combos are:
#   - default (`std + json + all-formats`)
#   - `--all-features`
#   - `--features std,...` — anything that pulls `std`
# The non-default CI tiers in spec §9 use `--features alloc,...` etc. and
# are marked `continue-on-error: true` in `.github/workflows/ci.yml` until
# the per-format migrations land.
aac        = []
aiff       = ["id3"]
ape        = ["id3"]
audible    = []
# `crw` — Canon CRW (CIFF) raw container (`CanonRaw.pm`). CRW chains `exif`
# because it REUSES the already-ported `Image::ExifTool::Canon` MakerNote
# sub-tables (`Canon::CameraSettings`/`ShotInfo`/`FocalLength`/`AFInfo`/
# `FileInfo`, which live under `src/exif/makernotes/vendors/canon`) for the
# records `%CanonRaw::Main` dispatches into them — emitting `Canon:*` tags
# exactly as a Canon JPEG does. Without the `exif` edge those decoders + the
# IFD `ByteOrder`/`RawValue` vocabulary are absent. The CIFF HEAP walker +
# the `CanonRaw::Main` scalar records are CRW-native (no other chain). The
# `Canon::SensorInfo`/`ColorBalance` sub-tables + the camera Composite
# subsystem + CanonCustom are Phase-2 / port-wide deferrals.
crw        = ["exif"]
dsf        = ["id3"]
dv         = []
# `exif` — the Exif/TIFF IFD infrastructure (FORMATS.md row 13). A standalone
# TIFF file IS an Exif/TIFF block (`File:FileType == "TIFF"` dispatches to
# `ProcessExif`). The IFD walker is camera-metadata-core critical path:
# QuickTime/RIFF/MakerNotes ports call `exif::parse_exif_block` on embedded
# Exif blocks. Leaf format (no cross-format chains).
exif       = []
flac       = ["id3"]
# `flash` (FLV/SWF) — Engine-only deps (no cross-format chains today; bundled
# Flash.pm uses `Image::ExifTool::FLAC` only for the SWF compressed-buffer
# read helper, which the port hasn't ported — SWF is deferred). The FLV
# audio/video header bit-stream extraction is faithful inline (not via the
# `FLAC::ProcessBitStream` shared engine path) because the Flash tables
# carry HASH PrintConvs the shared walker doesn't natively render.
# Re-uses `moi`'s ConvertDuration helper for `Flash:Duration`/`StartTime`
# PrintConv (`-j` only); the shared `write_convert_bitrate` helper for
# `Flash:AudioBitrate`/`VideoBitrate` PrintConv. Both live in
# `crate::convert` / `crate::formats::moi` and don't pull `moi`'s feature.
flash      = []
# `gps` — the EXIF GPS sub-IFD tag table + coordinate ValueConv (FORMATS.md
# row 14). The GPS IFD is a standard Exif sub-IFD reached through the Exif
# port's IFD0 tag 0x8825 (`GPSInfo`); the IFD walker is shared, so `gps`
# chains `exif`. Without the `exif` edge the GPS table has no walker.
gps        = ["exif"]
# `h264` — engine-only per FORMATS.md row 16 (no `H264` file type; consumed
# by M2TS/MPEG demuxers via `H264::ParseH264Video`). Leaf format, no
# cross-format chains; ports the NAL/SEI/MDPM walker + Exp-Golomb SPS parser.
h264       = []
id3        = []
# `matroska` — engine-only per FORMATS.md row 23. Leaf format (no
# cross-format chains); ports the entire EBML walker + tag table.
matroska   = []
# `mp3` chains ID3 (header), MPEG-audio (frame scan), AND APE: bundled
# `ID3::ProcessMP3` (ID3.pm:1722-1727) runs `APE::ProcessAPE` as the final
# trailer fallback, so the typed MP3 parser unconditionally calls
# `ape::ProcessApe`. Without the `ape` edge a `--features std,mp3` build
# (no `ape`) fails to compile.
mp3        = ["id3", "mpeg-audio", "ape"]
mpc        = ["id3", "ape"]
# `moi` is reserved here even though the actual `src/formats/moi.rs` code lives
# on the `moi-port` branch and hasn't merged to `main` yet. The format-gating
# `cfg` for MOI lands in Phase E when the MOI source merges.
moi        = []
# `mxf` — engine-only per FORMATS.md row 24. Leaf format (no cross-format
# chains); ports the KLV walker + BER length decoder + Primer + local-set
# walker + the MXF-specific value-type decoders.
mxf        = []
# `ogg` chains FLAC (METADATA_BLOCK_PICTURE — Vorbis comment's `Picture:*`
# SubDirectory hop reuses the FLAC type-6 picture-block parser, Vorbis.pm:
# 122-134) AND ID3 (`unless ($$et{DoneID3}) { ID3::ProcessID3 }` at
# Ogg.pm:79-83 — ID3-prefixed Ogg-Vorbis chain). Without either edge,
# `--features std,ogg` fails to compile (Codex R4 F1: silent feature-graph
# breakage from the R3 picture-parse + ID3-nest fixes).
ogg        = ["flac", "id3"]
# `plist` — engine-only per FORMATS.md row 12b. Leaf format (no cross-format
# chains); ports both the binary (`bplist0…`) and XML Apple-Property-List
# encodings. The `miniz_oxide` dep is needed for AAE `adjustmentData`'s
# `CompressedPLIST` raw-DEFLATE sub-directory (PLIST.pm:142-146, 228-239 —
# `IO::Uncompress::RawInflate`); a `bplist00`-prefixed payload skips inflate
# (PLIST.pm:228 `$$val !~ /^bplist00/` short-circuit).
plist      = ["dep:miniz_oxide"]
# `png` — Portable Network Graphics (FORMATS.md row 11). PNG chains `exif`
# because a real-world camera/phone PNG embeds Exif via the `eXIf` chunk
# (PNG.pm:309-317, PNG-1.5 spec, 2017); the captured TIFF block is decoded
# through `exif::parse_exif_block` at serialize time. zlib-compressed
# chunks (`zTXt`, `iTXt` with compression flag, the compressed `zXIf` EXIF
# variant) are now DECODED via the pure-Rust `miniz_oxide` inflater
# (`dep:miniz_oxide`, no_std + `with-alloc`) — bundled's local
# Compress::Zlib has the same effect (PNG.pm:929-948 `FoundPNG` inflate).
# The `iCCP` profile body is inflated too but the inflated ICC profile is
# NOT further decoded into ICC_Profile:* tags (that needs a dedicated
# ICC_Profile sub-port — deferred, out of camera-metadata scope); only the
# profile NAME is emitted. APNG animation chunks (`fcTL`/`fdAT`), MNG/JNG
# sibling containers, and private/vendor chunks (`iDOT`, `cpIp`, `caBX`,
# `seAl`, …) are deferred.
png        = ["exif", "dep:miniz_oxide"]
# `quicktime` — MOV / MP4 / M4A / M4V / 3GP / 3G2. SP1 (the box/atom
# walker + core structural atoms) is a leaf format with no cross-format
# chains. SP3 will add an `exif` edge for the embedded-Exif atom hop.
quicktime  = []
# `real` chains ID3 (Real.pm:678-687: ID3v1 trailer scan on RM files;
# the typed parser reuses `formats::id3::parse_id3v1_from_block` to
# decode the 128-byte TAG block via the same path the ID3 engine
# uses). Without the `id3` edge a `--features std,real` build fails
# to compile.
real       = ["id3"]
red        = []
wavpack    = ["id3", "ape"]

# Internal: MPEG audio frame parser (sub-dep of mp3). Maps to
# `src/formats/mpeg.rs` (the audio side). The video side of MPEG is a
# deferred Phase-2 forward item.
mpeg-audio = []

[dependencies]
derive_more = { version = "2", default-features = false, features = ["display", "is_variant", "unwrap", "try_unwrap"] }
# Reserved for Phase D's `MetaSinker`/`TagWriter` scaffold and Phase E's
# typed-Meta migration (datetimes via `jiff::civil::DateTime`). Not yet used.
jiff        = { version = "0.2", default-features = false }
# Pure-Rust zlib/DEFLATE inflater. Shared by two features (each pulls it via
# `dep:miniz_oxide`):
#   * `png` — PNG compressed chunks (`zTXt`, compressed `iTXt`, `iCCP` body,
#     `zXIf` EXIF) are ZLIB-wrapped DEFLATE ⇒ `inflate::decompress_to_vec_zlib`.
#   * `plist` — the AAE `adjustmentData` `CompressedPLIST` sub-directory
#     (PLIST.pm:228-239 `IO::Uncompress::RawInflate`) is RAW DEFLATE (no zlib
#     header) ⇒ `inflate::decompress_to_vec`.
# no_std-capable — `with-alloc` pulls only `alloc`, matching the crate's
# no_std+alloc contract.
miniz_oxide = { version = "0.8", default-features = false, features = ["with-alloc"], optional = true }
serde       = { version = "1", default-features = false, features = ["derive"], optional = true }
# `raw_value` exposes `serde_json::value::RawValue`, used by `jsondiff` to
# compare scalar lexemes byte-for-byte (strings escape-exact, numbers
# token-exact). This subsumes the old `arbitrary_precision` number path, and
# `preserve_order` is no longer needed because `serialize` builds the JSON
# string directly (no `serde_json` round-trip).
serde_json  = { version = "1", default-features = false, features = ["raw_value", "alloc"], optional = true }
smol_str    = { version = "0.3", default-features = false, optional = true }
thiserror   = { version = "2", default-features = false }

[dev-dependencies]
# `serde_json` is a normal (optional) dependency above; under the `json`
# feature it is in scope for tests too. Not duplicated here.
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
