# Golden-v2 Contract 3b — cargo-fuzz (libFuzzer) targets for the public parse
# entry points. This is a SEPARATE crate, EXCLUDED from the root `exifast`
# workspace (`[workspace] exclude = ["fuzz"]` in the root Cargo.toml), so the
# ordinary `cargo build`/`cargo test` never compiles it. Run with a nightly toolchain:
#   cargo +nightly fuzz run parse_bytes
[package]
name = "exifast-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
exifast = { path = "..", features = ["std", "json", "all-formats"] }

[[bin]]
name = "parse_bytes"
path = "fuzz_targets/parse_bytes.rs"
test = false
doc = false

[[bin]]
name = "media_metadata"
path = "fuzz_targets/media_metadata.rs"
test = false
doc = false

[[bin]]
name = "parse_exif_block"
path = "fuzz_targets/parse_exif_block.rs"
test = false
doc = false
